update page regist

--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="#welcome" class="active">Home</a></li>
-                            <li class="scroll-to-section"><a href="#regist">Register</a></li>
-                            <li class="scroll-to-section"><a href="http://sgo.idsosial.net/">Forum</a></li>
+                            <li class="scroll-to-section"><a href="https://stargateonline.id">Home</a></li>
+                            <li class="scroll-to-section"><a href="http://reg.stargateonline.id/regme.aspx">Register</a></li>
+                            <li class="scroll-to-section"><a href="http://forum.stargateonline.id/">Forum</a></li>
                             <li class="scroll-to-section"><a href="#frequently-question">FAQ</a></li>
                             <li class="scroll-to-section"><a href="#contact">Contact US</a></li>
                         </ul>
@@ -74,7 +74,7 @@
                 <div class="row">
                     <div class="col-lg-12s data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
                     <h1 style="margin-top: 0px;"><b>Selamat Datang di Stargate Online!</b></h1>
-                    <p>Stargate Online - Reborn Private Server, merupakan jenis permainan Fantasy berbasis MMORPG , dimana dalam game ini kamu dapat menikmati petualangan warna-warni dunia fantasy Online dengan tema futuristik dan mengemaskan bersama teman - teman.</p><br>
+                    <p>Stargate Online - Reborn Private Server, merupakan jenis permainan Fantasy berbasis MMORPG , dimana dalam game ini kamu dapat menikmati petualangan warna-warni dunia fantasy Online dengan tema futuristik dan menggemaskan bersama teman - teman.</p><br>
                     </div>
                 </div>
             </div>  
@@ -159,103 +159,6 @@
         </div>
     </section>
     <!-- ***** Features Big Item End ***** -->
-
-
-    <!-- ***** Features Big Item Start ***** -->
-    <section class="section" id="regist">
-        <div class="container">
-            <div class="row">
-                <div class="left-text col-lg-5 col-md-12 col-sm-12">
-                    <div class="section-heading">
-                        <h2>Register Account</h2>
-                    </div>
-                        <div class="regist-form">
-                            <form id="" action="register.php" method="post">
-                                <div class="row">
-                                    <input type="text" class="form-control" name="username" placeholder="Username 6 Digit" required="required" />
-                                    <input type="password" class="form-control" name="password" placeholder="Password 6 Digit" required="required" />
-                                    <input type="password" class="form-control" name="re-pass" placeholder="ReType Password" required="required" />
-                                    <input type="email" class="form-control" name="email" placeholder="Email" required="required" />
-                                    <button type="submit" class="btn btn-primary btn-block btn-large" name="submit">SUBMIT</button>
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                <div class="right-image col-lg-7 col-md-12 col-sm-12 mobile-bottom-fix-big" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="../template/images/Capture1.png" class="rounded img-fluid d-block mx-auto" alt="App">
-                </div>
-            </div>
-        </div>  
-    </section>
-    <!-- ***** Features Big Item End ***** -->
-
-    <!-- ***** Features Small Start ***** 
-    <section class="section" id="services">
-        <div class="container">
-            <div class="row">
-                <div class="owl-carousel owl-theme">
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="../sgo/template/images/service-icon-06.png" alt="avatar"></i>
-                        </div>
-                        <h5 class="service-title">Juhraya</h5>
-                        <p>Front-End Developer .</p>
-                        <a href="#" class="main-button">SGO ID Reborn</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="../sgo/template/images/Larantuka.png" alt="avatar"></i>
-                        </div>
-                        <h5 class="service-title">Larantuka</h5>
-                        <p>Network Engginer .</p>
-                        <a href="#" class="main-button">SGO ID Reborn</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="../template/images/service-icon-03.png" alt="avatar"></i>
-                        </div>
-                        <h5 class="service-title">Third Title Box</h5>
-                        <p>Quisque finibus libero augue, in ultrices quam dictum id. Aliquam quis tellus sit amet urna tincidunt bibendum.</p>
-                        <a href="#" class="main-button">SGO ID Reborn</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="../template/images/service-icon-02.png" alt="avatar"></i>
-                        </div>
-                        <h5 class="service-title">Fourth Service Box</h5>
-                        <p>Fusce sollicitudin feugiat risus, tempus faucibus arcu blandit nec. Duis auctor dolor eu scelerisque vestibulum.</p>
-                        <a href="#" class="main-button">SGO ID Reborn</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="../template/images/service-icon-01.png" alt="avatar"></i>
-                        </div>
-                        <h5 class="service-title">Fifth Service Title</h5>
-                        <p>Curabitur aliquam eget tellus id porta. Proin justo sapien, posuere suscipit tortor in, fermentum mattis elit.</p>
-                        <a href="#" class="main-button">SGO ID Reborn</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="../template/images/service-icon-03.png" alt="avatar"></i>
-                        </div>
-                        <h5 class="service-title">Sixth Box Title</h5>
-                        <p>Ut nibh velit, aliquam vitae pellentesque nec, convallis vitae lacus. Aliquam porttitor urna ut pellentesque.</p>
-                        <a href="#" class="main-button">SGO ID Reborn</a>
-                    </div>
-                    <div class="item service-item">
-                        <div class="icon">
-                            <i><img src="../template/images/service-icon-01.png" alt="avatar"></i>
-                        </div>
-                        <h5 class="service-title">Seventh Title Box</h5>
-                        <p>Sed a consequat velit. Morbi lectus sapien, vestibulum et sapien sit amet, ultrices malesuada odio. Donec non quam.</p>
-                        <a href="#" class="main-button">SGO ID Reborn</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    ***** Features Small End ***** -->
-
 
     <!-- ***** Frequently Question Start ***** -->
     <section class="section" id="frequently-question">
@@ -349,26 +252,14 @@
     </section>
     <!-- ***** Frequently Question End ***** -->
 
-
-    <!-- ***** Contact Us Start ***** -->
+    <!-- ***** Contact Form Start ***** -->
     <section class="section" id="contact-us">
         <div class="container-fluid">
             <div class="row">
-                <!-- ***** Contact Map Start ***** -->
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div id="map">
-                      <!-- How to change your own map point
-                           1. Go to Google Maps
-                           2. Click on your location point
-                           3. Click "Share" and choose "Embed map" tab
-                           4. Copy only URL and paste it within the src="" field below
-                    -->
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1197183.8373802372!2d-1.9415093691103689!3d6.781986417238027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdb96f349e85efd%3A0xb8d1e0b88af1f0f5!2sKumasi+Central+Market!5e0!3m2!1sen!2sth!4v1532967884907" width="100%" height="500px" frameborder="0" style="border:0" allowfullscreen></iframe>
-                    </div>
+                <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
+                    <img src="../template/images/Capture1.png" class="rounded img-fluid d-block mx-auto" style="margin-top:20px" alt="App">
                 </div>
-                <!-- ***** Contact Map End ***** -->
 
-                <!-- ***** Contact Form Start ***** -->
                 <div class="col-lg-6 col-md-6 col-sm-12">
                     <div class="contact-form">
                         <form id="contact" action="" method="post">
@@ -401,9 +292,7 @@
             </div>
         </div>
     </section>
-    <!-- ***** Contact Us End ***** -->
 
-    
     <!-- ***** Footer Start ***** -->
     <footer>
         <div class="container">
