--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-md-12 col-sm-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="../template/images/Capture.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="../template/images/Capture.PNG" class="rounded img-fluid d-block mx-auto" alt="App">
                 </div>
                 <div class="right-text col-lg-5 col-md-12 col-sm-12 mobile-top-fix">
                     <div class="left-heading">
@@ -103,43 +103,43 @@
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                     </td>
-                                    <td><a href="http://sgo.idsosial.net/viewtopic.php?id=20">Quest Job Lv 10</a></td>
+                                    <td><a href="https://forum.stargateonline.id/showthread.php?tid=16">Quest Job Lv 10</a></td>
                                     <td class="text-right" style="padding-right: 10px;">01 Jan 2021</td>
                                 </tr>
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                     </td>
-                                    <td><a href="http://sgo.idsosial.net/viewtopic.php?id=15">Quest Job ATT dan DEF Lv 30</a></td>
+                                    <td><a href="https://forum.stargateonline.id/showthread.php?tid=17">Quest Job ATT dan DEF Lv 30</a></td>
                                     <td class="text-right" style="padding-right: 10px;">01 Jun 2021</td>
                                 </tr>
                                  <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                     </td>
-                                    <td><a href="http://sgo.idsosial.net/viewtopic.php?id=17">Quest Job DMG dan AST Lv 30</a></td>
+                                    <td><a href="https://forum.stargateonline.id/showthread.php?tid=21">Quest Job DMG dan AST Lv 30</a></td>
                                     <td class="text-right" style="padding-right: 10px;">28 Des 2020</td>
                                 </tr>
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                     </td>
-                                    <td><a href="http://sgo.idsosial.net/viewtopic.php?id=17">Quest Job CUR dan M.PIS Lv 30</a></td>
+                                    <td><a href="https://forum.stargateonline.id/showthread.php?tid=20">Quest Job CUR dan M.PIS Lv 30</a></td>
                                     <td class="text-right" style="padding-right: 10px;">28 Des 2020</td>
                                 </tr>
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                      </td>
-                                    <td><a href="http://sgo.idsosial.net/viewtopic.php?id=18">Quest Job EMISARY Lv 30</a></td>
+                                    <td><a href="https://forum.stargateonline.id/showthread.php?tid=21">Quest Job EMISARY dan AST Lv 30</a></td>
                                     <td class="text-right" style="padding-right: 10px;">28 Des 2020</td>
                                 </tr>
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                     </td>
-                                    <td><a href="http://sgo.idsosial.net/viewtopic.php?id=19">Quest Job HLY dan PIS Lv 30</a></td>
+                                    <td><a href="https://forum.stargateonline.id/showthread.php?tid=19">Quest Job HLY dan PIS Lv 30</a></td>
                                     <td class="text-right" style="padding-right: 10px;">28 Des 2020</td>
                                 </tr>
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-warning">Notice</label>                       </td>
-                                    <td><a href="http://sgo.idsosial.net/viewforum.php?id=3">[Mini Quest] Update Mecha dan Portal</a></td>
+                                    <td><a href="https://forum.stargateonline.id/forumdisplay.php?fid=4">[Main Quest] Update Mecha dan Portal</a></td>
                                     <td class="text-right" style="padding-right: 10px;">28 Des 2020</td>
                                 </tr>
                             </table>
@@ -147,7 +147,7 @@
                     </div>
                     <div class="text-right">
                         <!--<small class="label-custom">Read more news from our staff related to event, update, notice</small>-->
-                         <a href="#" class="main-button">More News</a>
+                         <a href="https://forum.stargateonline.id/?i=1" class="main-button">More News</a>
                     </div>
                 </div>
             </div>
@@ -257,7 +257,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="../template/images/Capture1.png" class="rounded img-fluid d-block mx-auto" style="margin-top:20px" alt="App">
+                    <img src="../template/images/Capture1.PNG" class="rounded img-fluid d-block mx-auto" style="margin-top:20px" alt="App">
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12">
