--- a/index.html
+++ b/index.html
@@ -47,9 +47,10 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href="https://stargateonline.id">Home</a></li>
-                            <li class="scroll-to-section"><a href="http://reg.stargateonline.id/regme.aspx">Register</a></li>
+                            <li class="scroll-to-section"><a href="https://stargateonline.id/">Home</a></li>
+                            <li class="scroll-to-section"><a href="http://reg.stargateonline.id/">Register</a></li>
                             <li class="scroll-to-section"><a href="http://forum.stargateonline.id/">Forum</a></li>
+                            <li class="scroll-to-section"><a href="#downloads">Download</a></li>
                             <li class="scroll-to-section"><a href="#frequently-question">FAQ</a></li>
                             <li class="scroll-to-section"><a href="#contact">Contact US</a></li>
                         </ul>
