modify index, add news list page, and registration page

--- a/news.html
+++ b/news.html
@@ -65,7 +65,7 @@
 
 
     <!-- ***** Welcome Area Start ***** -->
-    <div class="welcome-area black-opac" id="welcome">
+    <div class="welcome-area" id="welcome" style="background-image: url(../template/images/gallery/sgo_wp025_1280x960.bmp);">
         <div class="black-opac">
         </div>
         <!-- ***** Header Text Start ***** -->
@@ -73,26 +73,19 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12s data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <h1 style="margin-top: 0px;"><b>Selamat Datang di Stargate Online!</b></h1>
-                    <p>Stargate Online - Reborn Private Server, merupakan jenis permainan Fantasy berbasis MMORPG , dimana dalam game ini kamu dapat menikmati petualangan warna-warni dunia fantasy Online dengan tema futuristik dan menggemaskan bersama teman - teman.</p><br>
+                    <h1 style="margin-top: 0px;"><b>Berita Tentang Stargate Online Indonesia</b></h1>
+                    <p>Stargate Online ID - Reborn News</p><br>
                     </div>
                 </div>
             </div>  
         </div>
     </div>
-        <!-- ***** Header Text End ***** -->
-    </div>
     <!-- ***** Welcome Area End ***** -->
 
-
-    <!-- ***** Features Big Item Start ***** -->
     <section class="section" id="news">
         <div class="container">
             <div class="row">
-                <div class="col-lg-7 col-md-12 col-sm-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="../template/images/gallery/sgo_wp003_1280x960.png" class="rounded img-fluid d-block mx-auto" alt="App">
-                </div>
-                <div class="right-text col-lg-5 col-md-12 col-sm-12 mobile-top-fix">
+                <div class="right-text col-lg-12 col-md-12 col-sm-12 mobile-top-fix">
                     <div class="left-heading">
                         <h4><b>NEWS | </b><small>Informasi seputar Stargate Online ID Reborn</small></h4>
                     </div>
@@ -145,133 +138,13 @@
                             </table>
                         </div>
                     </div>
-                    <div class="text-right">
-                        <!--<small class="label-custom">Read more news from our staff related to event, update, notice</small>-->
-                         <a href="/news.html" class="main-button">More News</a>
-                    </div>
+                    
                 </div>
             </div>
             <div class="row">
                 <div class="col-lg-12">
                     <div class="hr"></div>
                 </div>
-            </div>
-        </div>
-    </section>
-    <!-- ***** Features Big Item End ***** -->
-
-    <!-- ***** Frequently Question Start ***** -->
-    <section class="section" id="frequently-question">
-        <div class="container">
-            <!-- ***** Section Title Start ***** -->
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-heading">
-                        <h2>Frequently Asked Questions</h2>
-                    </div>
-                </div>
-                <div class="offset-lg-3 col-lg-6">
-                    <div class="section-heading">
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-            <!-- ***** Section Title End ***** -->
-
-            <div class="row">
-                <div class="left-text col-lg-6 col-md-6 col-sm-12">
-                    <h5>Peraturan Bermain Stargate Online ID Reborn</h5>
-                    <div class="accordion-text">
-                        <p><strong>1. Cheat / Bug</strong><br />Dilarang menggunakan segala jenis exploitasi dalam segala bentuk, baik itu berupa tindakan hacking atau melakukan <strong>BUG</strong> (costume/refine/IM/skill apapun) dalam bermain.&nbsp;<br /><strong>Sanksi</strong> : Banned 3 hari - Permanent<br />
-                        <p><strong>2. Dilarang Share ID</strong><br />Kami menghimbau untuk tidak melakukan share ID, segala bentuk kehilangan yang disebabkan kelalaian Player karena share ID diluar tanggung jawab Stargate Online ID Reborn.</p></p>
-                        <!--<span>Email: <a href="#">email@company.com</a><br></span>-->
-                        <a href="/index.html#contact" class="main-button">Contact Us</a>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="accordions is-first-expanded">
-                        <article class="accordion">
-                            <div class="accordion-head">
-                                <span>Persyaratan Konfigurasi</span>
-                                <span class="icon">
-                                    <i class="icon fa fa-chevron-right"></i>
-                                </span>
-                            </div>
-                            <div class="accordion-body">
-                                <div class="content">
-                                    <p><pre>
-        Sistem operasi      OS Windows
-        CPU                 P4
-        RAM                 512MB
-        Kartu suara         Mendukung DirectX
-        Kartu grafik        RAM 64MB, dukungan DirectX
-        Ruang hard disk     4 GB</p></pre>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="accordion">
-                            <div class="accordion-head">
-                                <span>Ras dan Karakter</span>
-                                <span class="icon">
-                                    <i class="icon fa fa-chevron-right"></i>
-                                </span>
-                            </div>
-                            <div class="accordion-body">
-                                <div class="content">
-                                    Hal pertama yang harus Anda lakukan adalah membuat karakter yang mewakili diri Anda sendiri.
-                                    Pertama-tama, akun game dapat memiliki 3 karakter di setiap server .
-                                    <br>
-                                    Kedua, ketika Anda ingin membuat karakter, Anda harus memberi nama karakter, memilih ras, mengatur penampilan, menetapkan poin, dan mengatur kata sandi karakter.
-                                    <br>Saat membuat karakter, Anda dapat memilih salah satu dari 3 ras berikut, yaitu: </p>
-                                    <ol>
-                                        <li>1. Manusia</li>
-                                        <li>2. Migu</li>
-                                        <li>3. Robot</li>
-                                    </ol>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="accordion">
-                            <div class="accordion-head">
-                                <span>Emoticons</span>
-                                <span class="icon">
-                                    <i class="icon fa fa-chevron-right"></i>
-                                </span>
-                            </div>
-                            <div class="accordion-body">
-                                <div class="content">
-                                    <p>Di dalam game, jika ingin mengekspresikan emosi, apa lagi yang bisa kamu lakukan selain mengetik?
-                                    Itu adalah menggunakan instruksi emosional! Akan ada beberapa perintah emosional dalam game untuk digunakan semua orang!<br>
-                                    Menggunakan perintah emosi sangat mudah. ​​Cukup klik tombol smiley biru di sebelah kanan kotak dialog, dan daftar perintah emosi akan muncul. Perintah ini dapat membuat orang melakukan tindakan berbeda ~~ Lumayan?
-                                    Jangan menjadi orang yang dingin! Melakukan lebih banyak instruksi ini akan membuat orang merasa lebih ramah.</p>
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- ***** Frequently Question End ***** -->
-
-    <!-- ***** Contact Form Start ***** -->
-    <section class="section" id="contact">
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-lg-6 col-md-6 col-sm-12 flex-center" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="../template/images/gallery/sgo_transparent.png" class="rounded img-fluid d-block mx-auto" alt="App">
-                </div>
-
-                <div class="col-lg-6 col-md-6 col-sm-12">
-                    <div class="flex-center height-100">
-                        <div>
-                            <h2>Want to know more about us? </h2>
-                            <p>Send an email to <a href="mailto:hi@stargateonline.id">hi@stargateonline.id</a>
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <!-- ***** Contact Form End ***** -->
             </div>
         </div>
     </section>
