--- a/news.html
+++ b/news.html
@@ -46,7 +46,7 @@
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
-                            <li class="scroll-to-section"><a href=" ">Home</a></li>
+                            <li class="scroll-to-section"><a href="/">Home</a></li>
                             <li class="scroll-to-section"><a href="#" onclick="alert('Coming Soon!');return false;">Register</a></li>
                             <li class="scroll-to-section"><a href="#" onclick="alert('Coming Soon!');return false;">Download</a></li>
                             <li class="scroll-to-section"><a href="/index.html#frequently-question">FAQ</a></li>
