--- a/guide.html
+++ b/guide.html
@@ -17,7 +17,7 @@
     <!-- Additional CSS Files -->
     <link rel="stylesheet" type="text/css" href="template/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/fork-awesome@1.1.7/css/fork-awesome.min.css" integrity="sha256-gsmEoJAws/Kd3CjuOQzLie5Q3yshhvmo7YNtBG7aaEY=" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="template/css/stylelist.css">
+    <link rel="stylesheet" type="text/css" href="template/css/style.css">
     <link rel="stylesheet" type="text/css" href="template/css/owl-carousel.css">
     <link rel="stylesheet" href="tamplate/css/iconfont.min.css">
 
@@ -65,7 +65,22 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Welcome Area Start ***** -->
-    <div class="welcome-area" id="welcome"></div>
+    <div class="welcome-area" id="welcome">
+
+        <!-- ***** Header Text Start ***** -->
+        <div class="header-text">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12s data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
+                    <h1 style="margin-top: 0px;"><b>Selamat Datang di Guide Stargate Online!</b></h1>
+                    <p></p><br>
+                    </div>
+                </div>
+            </div>  
+        </div>
+    </div>
+    <!-- ***** Header Text End ***** -->
+ 
     <!-- ***** Welcome Area End ***** -->
 
     <section class="section-sub-nav">
