Update CSS For Mobile

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <img src="../template/images/Artboard-logo.png" class="logo">
+                        <img src="template/images/Artboard-logo.png" class="logo">
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
@@ -90,7 +90,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-7 col-md-12 col-sm-12" data-scroll-reveal="enter left move 30px over 0.6s after 0.4s">
-                    <img src="../template/images/gallery/sgo_wp003_1280x960.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="template/images/gallery/sgo_wp003_1280x960.png" class="rounded img-fluid d-block mx-auto" alt="App">
                 </div>
                 <div class="right-text col-lg-5 col-md-12 col-sm-12 mobile-top-fix">
                     <div class="left-heading">
@@ -265,7 +265,7 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-12 flex-center" data-scroll-reveal="enter right move 30px over 0.6s after 0.4s">
-                    <img src="../template/images/gallery/sgo_transparent.png" class="rounded img-fluid d-block mx-auto" alt="App">
+                    <img src="template/images/gallery/sgo_transparent.png" class="rounded img-fluid d-block mx-auto" alt="App">
                 </div>
 
                 <div class="col-lg-6 col-md-6 col-sm-12">
