--- a/guide.html
+++ b/guide.html
@@ -10,7 +10,7 @@
     Game online gratis. Game rpg gratis. Game gratis">
     <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link rel="alternate" href="http://www.stargateonline.id" hreflang="id-id" />
-    <link rel="shortcut icon" href="../template/images/favicon.ico">
+    <link rel="shortcut icon" href="template/images/favicon.ico">
     
     <title>Stargate Online - SGO ID Reborn Private Server</title>
 
@@ -42,7 +42,7 @@
                 <div class="col-12">
                     <nav class="main-nav">
                         <!-- ***** Logo Start ***** -->
-                        <img src="../sgo-new-main/template/images/Artboard-logo.png" class="logo">
+                        <img src="template/images/Artboard-logo.png" class="logo">
                         <!-- ***** Logo End ***** -->
                         <!-- ***** Menu Start ***** -->
                         <ul class="nav">
@@ -65,7 +65,7 @@
     <!-- ***** Header Area End ***** -->
 
     <!-- ***** Welcome Area Start ***** -->
-    <div class="welcome-area" id="welcome">
+    <div class="welcome-area black-opac" id="welcome">
 
         <!-- ***** Header Text Start ***** -->
         <div class="header-text">
@@ -86,19 +86,19 @@
     <section class="section-sub-nav">
       <div class="container">
           <!-- ***** Section Title Start ***** -->
-          <div class="row-sub">
-              <div class="col-12">
-                <nav class="sub-nav">
-                    <ul class="list-nav">
-                        <li ><a href="">Weapon</a></li>
-                        <li ><a href="">Armor</a></li>
-                        <li ><a href="">Monster</a></li>
-                        <li ><a href="">NPC</a></li>
-                    </ul>
-                </nav>
+            <div class="row-sub">
+                <div class="col-lg-12s">
+                    <div class="sub-nav">
+                        <ul class="list-nav">
+                            <li ><a href="">Weapon</a></li>
+                            <li ><a href="">Armor</a></li>
+                            <li ><a href="">Monster</a></li>
+                            <li ><a href="">NPC</a></li>
+                        </ul>
+                    </div>
                 </div>
             </div>
-          </div>
+        </div>
     </section>
 
     <!-- ***** Features List Item Start ***** -->
@@ -109,34 +109,34 @@
           <table class="table table-striped custom-table">
             <thead>
               <tr>
-                <th scope="col">No</th>
-                <th scope="col">Name</th>
-                <th scope="col">Weapon Type</th>
-                <th scope="col">ATK</th>
-                <th scope="col">MATK</th>
-                <th scope="col">MISS</th>
-                <th scope="col">DEF</th>
-                <th scope="col">MDEF</th>
-                <th scope="col">HIT</th>
-                <th scope="col">LUCK</th>
-                <th scope="col">LEVEL</th>
-                <th scope="col">NPC</th>
+                <th scope="col" >No</th>
+                <th scope="col" >Name</th>
+                <th scope="col" >Weapon Type</th>
+                <th scope="col" >ATK</th>
+                <th scope="col" >MATK</th>
+                <th scope="col" >MISS</th>
+                <th scope="col" >DEF</th>
+                <th scope="col" >MDEF</th>
+                <th scope="col" >HIT</th>
+                <th scope="col" >LUCK</th>
+                <th scope="col" >LEVEL</th>
+                <th scope="col" >NPC</th>
               </tr>
             </thead>
             <tbody>
               <tr scope="row">
-                        <td>1</td>
-                        <td>Deager</td>
-                        <td>Sword</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>10</td>
-                        <td>Nila Capital</td>
+                        <td >1</td>
+                        <td >Deager</td>
+                        <td >Sword</td>
+                        <td >10</td>
+                        <td >10</td>
+                        <td >10</td>
+                        <td >10</td>
+                        <td >10</td>
+                        <td >10</td>
+                        <td >10</td>
+                        <td >10</td>
+                        <td >Nila Capital</td>
               </tr>
             </tbody>
           </table>
