Update CSS For Mobile

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                             <div class="accordion-body">
                                 <div class="content">
                                     <p><pre>
-        Sistem operasi      OS Windows
+        Sistem Operasi      OS Windows
         CPU                 P4
         RAM                 512MB
         Kartu suara         Mendukung DirectX
