add close beta period news to home and news

--- a/news.html
+++ b/news.html
@@ -96,13 +96,19 @@
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                     </td>
-                                    <td><a href="news/sgo-indonesia-server-info.html">Stargate Online Indonesia Server Info</a></td>
+                                    <td><a href="/news/periode-close-beta">Periode Close Beta</a></td>
+                                    <td class="text-right" style="padding-right: 10px;">30 Jul 2022</td>
+                                </tr>
+                                <tr>
+                                    <td width="80" style="padding-left: 10px;">
+                                        <label class="label label-info">Update</label>                     </td>
+                                    <td><a href="/news/sgo-indonesia-server-info.html">Stargate Online Indonesia Server Info</a></td>
                                     <td class="text-right" style="padding-right: 10px;">23 Jul 2022</td>
                                 </tr>
                                 <tr>
                                     <td width="80" style="padding-left: 10px;">
                                         <label class="label label-info">Update</label>                     </td>
-                                    <td><a href="news/nws-1.html">Stargate Online Indonesia Opening</a></td>
+                                    <td><a href="/news/nws-1.html">Stargate Online Indonesia Opening</a></td>
                                     <td class="text-right" style="padding-right: 10px;">17 Jul 2022</td>
                                 </tr>
                                 <!-- <tr>
